feat(dot): added partials instead for components folder

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -49,6 +49,8 @@
             <a href="/">Home</a>
             <a href="/trains">Trains</a>
             <a href="/schedules">Schedules</a>
+            <a href="/bookings">Bookings</a>
+            <a href="/auth"> Auth</a>
         </nav>
         {{{body}}}
     </div>
